--- a/index.html
+++ b/index.html
@@ -6,6 +6,55 @@
     <link href=".ressources/index.css" type="text/css" rel="stylesheet"/>
   </head>
   <body>
+    <div id="banner">
+      <h1> Broadway Design </h1>
+      <span> Home </span>
+      <span> Process  </span>
+      <span> Work </span>
+      <span> Team </span>
+      <span> Contact </span>
+    </div>
+    <div class=container>
+      <h2> Process </h2>
+      <div class="bloc">
+        <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/identify.svg"/>
+        <h3> Identify </h3>
+        <p> We focus on the most important details </p>
+      </div>
+      <div class="bloc">
+        <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/understand.svg"/>
+        <h3> Understand </h3>
+        <p> We study our projects inside and out </p>
+      </div>
+      <div class="bloc">
+        <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/execute.svg"/>
+        <h3> Execute </h3>
+        <p> We pull everything we have into our work </p>
+      </div>
+    </div>
+    <div class=container>
+      <h2 id="titre"> Designed in New York </h2>
+      <div class="bloc">
+        <h3> Portfolio </h3>
+        <p> Coming soon </p>
+      </div>
+      <div class="bloc">
+        <h3> Team </h3>
+        <p> We're hiring ! </p>
+      </div>
+      <div class="bloc">
+        <h3> Contact </h3>
+        <p> Phone: (555)-555-5555 <br/> E-mail: test@example.com <br/> Twitter: @test </p>
+      </div>
+    </div>
+    <footer>
+      <p> &copy Broadway 2017 </p>
+      <span> Home </span>
+      <span>   About </span>
+      <span>   Team </span>
+      <span>   Work </span>
+      <span>   Contact </span>
 
+    </footer>
   </body>
 </html>
