--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title> Broadway design </title>
-    <link href=".ressources/index.css" type="text/css" rel="stylesheet"/>
+    <link href="./ressources/index.css" type="text/css" rel="stylesheet"/>
   </head>
   <body>
     <div id="banner">
@@ -14,8 +14,9 @@
       <span> Team </span>
       <span> Contact </span>
     </div>
-    <div class=container>
-      <h2> Process </h2>
+
+    <h2> Process </h2>
+    <div class="container">
       <div class="bloc">
         <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/identify.svg"/>
         <h3> Identify </h3>
@@ -32,8 +33,9 @@
         <p> We pull everything we have into our work </p>
       </div>
     </div>
-    <div class=container>
-      <h2 id="titre"> Designed in New York </h2>
+
+    <h2 id="titre"> Designed in New York </h2>
+    <div class="container">
       <div class="bloc">
         <h3> Portfolio </h3>
         <p> Coming soon </p>
