--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
   <body>
     <div id="banner">
       <h1> Broadway Design </h1>
-      <span> Home </span>
-      <span> Process  </span>
-      <span> Work </span>
-      <span> Team </span>
-      <span> Contact </span>
+      <div>
+        <span> Home </span>
+        <span> Process  </span>
+        <span> Work </span>
+        <span> Team </span>
+        <span> Contact </span>
+      </div>
     </div>
 
     <h2> Process </h2>
